--- a/app/css/layout.css
+++ b/app/css/layout.css
@@ -23,7 +23,7 @@
     }
 
     .tiles{
-        padding-top: 180px;
+        padding-top: 220px;
     }
 }
 
@@ -50,7 +50,7 @@
     }
 
     .tiles{
-        padding-top: 280px;
+        padding-top: 310px;
     }
 }
 
